# coach-math

./: README.md  setup.cfg  setup.py
coach-math/: __init__.py  training.py
coach-math/tasks/: multiplication.py
coachmath/: training.py
coachmath/tasks/: division.py  multiplication.py
