[metadata]
name = coachmath
version = file: VERSION
author = Manuel Proissl
description = A simple Python-based coach to solve problems in mathematics.
long_description = file: README.md
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >= 3.6
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pyyaml
    google_trans_new

[options.packages.find]
exclude =
    tests*
